--- a/index.html
+++ b/index.html
@@ -49,9 +49,11 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <p>Computer Science Student (University of California, Riverside)</p>
     <img src="profile_girl.jpg" class="w3-image w3-hide-large w3-hide-small w3-round" style="display:block;width:60%;margin:auto;">
     <img src="profile_girl.jpg" class="w3-image w3-hide-large w3-hide-medium w3-round" width="1000" height="1333">
-    <button class="w3-button w3-light-grey w3-padding-large w3-margin-top">
-      <i class="fa fa-download"></i> Download Resume
-    </button>
+    <a href="\ButtonDownload\GeneralResume.pdf" download="RaquelLinResume">
+      <button class="w3-button w3-light-grey w3-padding-large w3-margin-top" type="button">
+        <i class="fa fa-download"></i> Download Resume
+      </button>
+    </a>
   </header>
 
   <!-- Portfolio Section -->
