Fixed background color and button transparency!

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <img src="profile_girl.jpg" class="w3-image w3-hide-large w3-hide-small w3-round" style="display:block;width:60%;margin:auto;">
     <img src="profile_girl.jpg" class="w3-image w3-hide-large w3-hide-medium w3-round" width="1000" height="1333">
     <a href="\ButtonDownload\GeneralResume.pdf" download="RaquelLinResume">
-      <button class="w3-button w3-light-grey w3-padding-large w3-margin-top" type="button">
-        <i class="fa fa-download"></i> Download Resume
+      <button class="w3-button w3-padding-large w3-margin-top" style="background-color:transparent" type="button">
+        <i class="fa fa-download"></i> Click on me to see my Resume!
       </button>
     </a>
   </header>
@@ -60,9 +60,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   <div class="w3-content w3-justify w3-text-grey w3-padding-32" id="about">
     <h2>About</h2>
     <hr class="w3-opacity">
-    <p>Some text about me. Some text about me. I am lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing
-      elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+    <p>I'm Raquel Lin, a Computer Science student from UCR. I'm looking to build a 
     </p>
     <head>
       <meta name="viewport" content="width=device-width, initial-scale=1">
