--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <hr>
 
         <div class="row" style="margin:0%;">
-            <div class="column" style="background-color:bisque;">
+            <div class="column" style="background-color:transparent;">
                 <h2 style="text-align:center; text-decoration: underline;">
                     Knowledge
                 </h2>
@@ -66,7 +66,7 @@
                     <li>Object-oriented Programming</li>
                 </ul>
             </div>
-            <div class="column" style="background-color:rgb(245, 230, 203);">
+            <div class="column" style="background-color:transparent;">
                 <h2 style="text-align:center; text-decoration: underline;">
                     Experiences
                 </h2>
