Fixed up the template html a bit more

--- a/PersonalWebsiteTemplate/index.html
+++ b/PersonalWebsiteTemplate/index.html
@@ -8,7 +8,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-		<title>Kinetic HTML Template</title>
+		<title>Raquel Lin</title>
 		<!--
 
 Template 2090 Kinetic
@@ -154,7 +154,7 @@ http://www.tooplate.com/view/2090-kinetic
 											<div class="col-md-6">
 												<div class="right-image">
 													<img
-														src="img/right-about-image.png"
+														src="img/Icon/meiconcircle2.PNG"
 														alt=""
 													/>
 												</div>
@@ -165,39 +165,36 @@ http://www.tooplate.com/view/2090-kinetic
 							</div>
 							<div class="page" id="p3">
 								<li class="icon fa fa-image">
-									<span class="title">Tinkerings</span>
+									<div class="title">Projects</div>
+									<h4>Click on an image to check out the Github repository!</h4>
+									<h4>There's more projects on the Github as well! (Page in progress)</h4>
 									<div class="container">
 										<div class="row">
 											<div
-												class="col-md-3 col-md-offset-1"
+												class="col-md-5 col-md-offset-1"
 											>
 												<div class="project-item">
 													<a
-														href="img/item-01.jpg"
-														data-lightbox="image-1"
+														href="https://github.com/whistlerat/xv6" target="_blank" rel="noopener noreferrer"
 														><img
-															src="img/thumb-01.jpg"
+															src="img/Project/XV6code.png" alt="xv6Code"
 													/></a>
 												</div>
-											</div>
-											<div class="col-md-3">
-												<div class="project-item">
-													<a
-														href="img/item-02.jpg"
-														data-lightbox="image-1"
-														><img
-															src="img/thumb-02.jpg"
-													/></a>
+												<div class="text-item">
+													<p>xv6 Modification</p>
 												</div>
 											</div>
-											<div class="col-md-4">
+											<div class="col-md-5">
 												<div class="project-item">
 													<a
-														href="img/item-03.jpg"
-														data-lightbox="image-1"
+														href="https://github.com/whistlerat/RoseHack2019" target="_blank" rel="noopener noreferrer"
 														><img
-															src="img/thumb-03.jpg"
+															src="img/Project/MiyazakiWebsite.png" alt=MiyazakiWebsite
 													/></a>
+													<div class="text-item">
+														<p>Hayao Miyazaki Tribute Website</p>
+													</div>
+												</div>
 												</div>
 											</div>
 											<div
@@ -205,14 +202,15 @@ http://www.tooplate.com/view/2090-kinetic
 											>
 												<div class="project-item">
 													<a
-														href="img/item-04.jpg"
-														data-lightbox="image-1"
-														><img
-															src="img/thumb-04.jpg"
-													/></a>
+														href="https://github.com/whistlerat/GhostHauntedHouse" target="_blank" rel="noopener noreferrer"
+														><video width=120% height=auto autoplay controls><source src="img/Project/HauntedHouse.mp4" type="video/mp4">Your browser does not support the video tag</video>
+													</a>
+													<div class="text-item">
+														<p>Haunted House Exploration Game</p>
+													</div>
 												</div>
 											</div>
-											<div class="col-md-3">
+											<!--<div class="col-md-3">
 												<div class="project-item">
 													<a
 														href="img/item-05.jpg"
@@ -236,7 +234,7 @@ http://www.tooplate.com/view/2090-kinetic
 															src="img/thumb-06.jpg"
 													/></a>
 												</div>
-											</div>
+											</div>-->
 										</div>
 									</div>
 								</li>
@@ -379,9 +377,6 @@ http://www.tooplate.com/view/2090-kinetic
 									</div>
 								</li>
 							</div>
-              <p class="credit">
-                Design: Tooplate
-              </p>
               </div>
 						</section>
 					</div>
