updated public folder

--- a/public/public/index.html
+++ b/public/public/index.html
@@ -1,99 +1,422 @@
 <!DOCTYPE html>
-<html>
-  <title>Raquel Lin</title>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="self.css" />
-  <body>
-    <!-- creating a Navigation sidebar!-->
-    <!-- maybe when I have more stuff LMAO-->
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang=""> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang=""> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
+<!--[if gt IE 8]><!-->
+<html class="no-js" lang="">
+	<!--<![endif]-->
+	<head>
+		<meta charset="utf-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+		<title>Raquel Lin</title>
+		<!--
 
-    <!-- Header! -->
-    <!-- TODO:: Find symbols to replace some hyperlnks with-->
-    <!-- Some paper for resume, github for.. github-->
-    <div>
-      <div>
-        <header class="centerAlign" style="padding: 25px 16px">
-          <h1 style="font-size: 64px">Raquel Lin</h1>
-          <p style="font-size: 16px; padding-top: 0px">
-            Year 4 Computer Science | University of California, Riverside
-          </p>
-          <a
-            href="\ExternalFiles\GeneralResume.pdf"
-            download="RaquelLinResume"
-          >
-            <button class="niceButton" type="button">Resume</button>
-          </a>
-          <a href="https://github.com/whistlerat/">
-            <button class="niceButton" type="button">GitHub</button>
-          </a>
-        </header>
-      </div>
-      <!-- End Header Section -->
+Template 2090 Kinetic
 
-      <!-- About Me Section! -->
-      <div style="padding-bottom: 5%">
-        <h2 style="margin: 0%">About Me</h2>
-        <hr />
-        <p style="padding-left: 2%; padding-right: 2%">
-          Hi, I'm Raquel! I'm a fourth year Computer Science undergraduate just
-          looking to learn fascinating things and create interesting things.
-          Anything and everything out of the ordinary catches my eye!
-        </p>
-      </div>
-      <!-- End About Me-->
+http://www.tooplate.com/view/2090-kinetic
 
-      <div style="padding-bottom: 5%">
-        <h2 style="margin: 0%">Projects</h2>
-        <hr/>
-        <ul>
-          <li>
-            <a href="https://github.com/whistlerat/CS135_Final-Project">"Haunted House Puzzle Experience</a>
-          </li>
-          <li>
-            <a href="https://github.com/whistlerat/xv6">xv6 Operating System Manipulation</a>
-          </li>
-          <li>
-            <a href="https://github.com/whistlerat/CS165Lab1">Password Crack using m5 Hash</a>
-          </li>
-          <li>
-            <a href="https://github.com/whistlerat/CS166.git">Rough Database Schema Implementation</a>
-          </li>
-        </ul>
-      </div>
+-->
+		<meta name="description" content="" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="apple-touch-icon" href="apple-touch-icon.png" />
 
-      <!-- Technical Skills Section Start-->
-      <div>
-        <h2 style="margin: 0%">Technical Skills</h2>
-        <hr />
+		<link rel="stylesheet" href="css/bootstrap.min.css" />
+		<link
+			href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700,800,900"
+			rel="stylesheet"
+		/>
+		<link rel="stylesheet" href="css/bootstrap-theme.min.css" />
+		<link rel="stylesheet" href="css/fontAwesome.css" />
+		<link rel="stylesheet" href="css/tooplate-style.css" />
 
-        <div class="row" style="margin: 0%">
-          <div class="column" style="background-color: transparent">
-            <h2 style="text-align: center; text-decoration: underline">
-              Knowledge
-            </h2>
-            <ul>
-              <li>C/C++</li>
-              <li>Python</li>
-              <li>C#</li>
-              <li>TCL</li>
-              <li>Object-oriented Programming</li>
-            </ul>
-          </div>
-          <div class="column" style="background-color: transparent">
-            <h2 style="text-align: center; text-decoration: underline">
-              Experiences
-            </h2>
-            <ul>
-              <li>Intern, <i>Western Digital</i></li>
-              <li>Administrative Assitant, <i>Optec Displays</i></li>
-              <li>Student Tutor</li>
-            </ul>
-          </div>
-        </div>
+		<script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+	</head>
+	<body>
+		<!--[if lt IE 8]>
+			<p class="browserupgrade">
+				You are using an <strong>outdated</strong> browser. Please
+				<a href="http://browsehappy.com/">upgrade your browser</a> to
+				improve your experience.
+			</p>
+		<![endif]-->
 
-        <!-- End of Technical Skills Section-->
-      </div>
-    </div>
-  </body>
+		<div class="ct" id="t1">
+			<div class="ct" id="t2">
+				<div class="ct" id="t3">
+					<div class="ct" id="t4">
+						<section>
+							<ul>
+								<a href="#t1"
+									><li class="icon fa fa-home" id="uno"></li
+								></a>
+								<a href="#t2"
+									><li class="icon fa fa-user" id="dos"></li
+								></a>
+								<a href="#t3"
+									><li class="icon fa fa-image" id="tres"></li
+								></a>
+								<!--
+								<a href="#t4"
+									><li
+										class="icon fa fa-phone"
+										id="cuatro"
+									></li
+								></a>
+								-->
+							</ul>
+							<div class="page" id="p1">
+								<li class="icon fa fa-home">
+									<span class="title">Hello there!</span>
+									<h4>I'm Raquel!</h4>
+									<p>
+										"Every school of thought and government has failed in this city — 
+                    but I love it nonetheless. 
+                    It belongs to me as much as it belongs to you."
+                    <br></br>
+                    Disco Elysium... a game where you can find happiness in a 2 millimeter hole in the world.
+                    <br></br>
+                    We live in a world quite different to that slice of Elysium, yet it is just as fascinating!
+									</p>
+									<div class="primary-button">
+										<a href="#t2">Who are you?</a>
+									</div>
+								</li>
+							</div>
+							<div class="page" id="p2">
+								<li class="icon fa fa-user">
+									<span class="title">About Me</span>
+									<div class="container">
+										<div class="row">
+											<div class="col-md-6">
+												<div class="left-text">
+													<h4>Who am I?</h4>
+													<p style="font-size:16px">
+														I'm a
+														computer science student
+														looking for something
+														that'll keep me
+														<b>fascinated</b> until the end
+														of time. Something I can
+														send my unstoppable
+														<b>train of thought</b> chasing
+														after, something to
+														occupy my thoughts until
+														I can think no more.
+                          </p>
+                          <p>
+														In not so dramatic terms,
+														I'm constantly looking for something to <i>entertain</i> myself (but how?)
+                          </p>
+                          <hr>
+                          <p style="font-size:16px">
+                            <i>Maybe</i> that means
+														chasing <b>different
+														solutions</b> to something
+														that should've had a
+														simple solution just
+														because I <i>knew</i>
+														that I could make it
+														even better. 
+                          </p>
+                          <hr>
+                          <p style="font-size:16px">
+                            <i>Maybe</i> that means hyperfixating on a project because I was convinced I <i>knew</i> exactly what I had to do and why.
+                          </p>
+                          <p>
+                            Does it always work out like that? 
+                            I think you and I both know the answer to that... 
+                            but it's still great fun!
+                          </p>
+                          <hr>
+                          <p style="font-size:16px">
+                            <i>Maybe</i> it even means
+														burning precious time
+														and energy on figuring
+														out how to create a
+														website from scratch,
+														only to realize I'm
+														trying to do a better
+														job than the countless,
+                            incredibly talented front-end devs out there.
+                          </p>
+                          <p>
+                            It was still quite an interesting learning process! I've never seen so many beautiful website designs before, and my admiration for the talent that makes it happen is immeasurable.
+                          </p>
+                          <hr>
+                          <p style="font-size:18px">
+                            There's an endless amount of fascinating things in this <i>wonderful</i> world of ours!
+													</p>
+													<div class="primary-button">
+														<a href="#t3"
+															>What do you do?</a
+														>
+													</div>
+												</div>
+											</div>
+											<div class="col-md-6">
+												<div class="right-image">
+													<img
+														src="img/Icon/meiconcircle2.PNG"
+														alt=""
+													/>
+												</div>
+											</div>
+										</div>
+									</div>
+								</li>
+							</div>
+							<div class="page" id="p3">
+								<li class="icon fa fa-image">
+									<div class="title">Projects</div>
+									<h4>Click on an image to check out the Github repository!</h4>
+									<h4>There's more projects on the Github as well! (Page in progress)</h4>
+									<div class="container">
+										<div class="row">
+											<div
+												class="col-md-5 col-md-offset-1"
+											>
+												<div class="project-item">
+													<a
+														href="https://github.com/whistlerat/xv6" target="_blank" rel="noopener noreferrer"
+														><img
+															src="img/Project/XV6code.png" alt="xv6Code"
+													/></a>
+												</div>
+												<div class="text-item">
+													<p>xv6 Modification</p>
+												</div>
+											</div>
+											<div class="col-md-5">
+												<div class="project-item">
+													<a
+														href="https://github.com/whistlerat/RoseHack2019" target="_blank" rel="noopener noreferrer"
+														><img
+															src="img/Project/MiyazakiWebsite.png" alt=MiyazakiWebsite
+													/></a>
+													<div class="text-item">
+														<p>Hayao Miyazaki Tribute Website</p>
+													</div>
+												</div>
+												</div>
+											</div>
+											<div
+												class="col-md-4 col-md-offset-1"
+											>
+												<div class="project-item">
+													<a
+														href="https://github.com/whistlerat/GhostHauntedHouse" target="_blank" rel="noopener noreferrer"
+														><video width=120% height=auto autoplay controls><source src="img/Project/HauntedHouse.mp4" type="video/mp4">Your browser does not support the video tag</video>
+													</a>
+													<div class="text-item">
+														<p>Haunted House Exploration Game</p>
+													</div>
+												</div>
+											</div>
+											<!--<div class="col-md-3">
+												<div class="project-item">
+													<a
+														href="img/item-05.jpg"
+														data-lightbox="image-1"
+														><img
+															src="img/thumb-05.jpg"
+													/></a>
+												</div>
+											</div>
+											<div class="col-md-3">
+												<div
+													class="
+														project-item
+														last-project
+													"
+												>
+													<a
+														href="img/item-06.jpg"
+														data-lightbox="image-1"
+														><img
+															src="img/thumb-06.jpg"
+													/></a>
+												</div>
+											</div>-->
+										</div>
+									</div>
+								</li>
+							</div>
+							<!--
+							<div class="page" id="p4">
+								<li class="icon fa fa-phone">
+									<span class="title">Contact Us</span>
+									<div class="container">
+										<div class="row">
+											<div class="col-md-6">
+												<form
+													id="contact"
+													action=""
+													method="post"
+												>
+													<div class="col-md-12">
+														<fieldset>
+															<input
+																name="name"
+																type="text"
+																class="
+																	form-control
+																"
+																id="name"
+																placeholder="Your Name"
+																required
+															/>
+														</fieldset>
+													</div>
+													<div class="col-md-12">
+														<fieldset>
+															<input
+																name="email"
+																type="email"
+																class="
+																	form-control
+																"
+																id="email"
+																placeholder="Email"
+																required
+															/>
+														</fieldset>
+													</div>
+													<div class="col-md-12">
+														<fieldset>
+															<textarea
+																name="message"
+																rows="6"
+																class="
+																	form-control
+																"
+																id="message"
+																placeholder="Message"
+																required
+															></textarea>
+														</fieldset>
+													</div>
+													<div class="col-md-12">
+														<fieldset>
+															<button
+																type="submit"
+																id="form-submit"
+																class="btn"
+															>
+																Send Message
+															</button>
+														</fieldset>
+													</div>
+												</form>
+											</div>
+											<div class="col-md-6">
+												<div class="right-info">
+													<p>
+														Lorem ipsum dolor ,
+														consectetur adipiscing
+														elit. Nunc purus ligula,
+														ullamcorper idermate
+														velit id, vestibulum auc
+														sapien. Sed quis mauris
+														eget semps imperdiet
+														rhoncus.<br /><br />
+														<em
+															>120-360 Etiam
+															mauris erat,<br />
+															Vestibulum eu augue
+															nec, 10110<br />
+															Nam consequat<br
+														/></em>
+													</p>
+													<ol class="social-icons">
+														<i
+															><a href="#"
+																><i
+																	class="
+																		fa
+																		fa-facebook
+																	"
+																></i></a
+														></i>
+														<i
+															><a href="#"
+																><i
+																	class="
+																		fa
+																		fa-twitter
+																	"
+																></i></a
+														></i>
+														<i
+															><a href="#"
+																><i
+																	class="
+																		fa
+																		fa-linkedin
+																	"
+																></i></a
+														></i>
+														<i
+															><a href="#"
+																><i
+																	class="
+																		fa
+																		fa-rss
+																	"
+																></i></a
+														></i>
+														<i
+															><a href="#"
+																><i
+																	class="
+																		fa
+																		fa-behance
+																	"
+																></i></a
+														></i>
+													</ol>
+												</div>
+											</div>
+										</div>
+									</div>
+								</li>
+							</div>
+						-->
+              </div>
+						</section>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+		<script>
+			window.jQuery ||
+				document.write(
+					'<script src="js/vendor/jquery-1.11.2.min.js"><\/script>'
+				);
+		</script>
+
+		<script src="js/vendor/bootstrap.min.js"></script>
+
+		<script src="js/plugins.js"></script>
+		<script src="js/main.js"></script>
+
+		<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+		<script>
+			(function (b, o, i, l, e, r) {
+				b.GoogleAnalyticsObject = l;
+				b[l] ||
+					(b[l] = function () {
+						(b[l].q = b[l].q || []).push(arguments);
+					});
+				b[l].l = +new Date();
+				e = o.createElement(i);
+				r = o.getElementsByTagName(i)[0];
+				e.src = '//www.google-analytics.com/analytics.js';
+				r.parentNode.insertBefore(e, r);
+			})(window, document, 'script', 'ga');
+			ga('create', 'UA-XXXXX-X', 'auto');
+			ga('send', 'pageview');
+		</script>
+	</body>
 </html>
