Added resume button!

--- a/PersonalWebsiteTemplate/index.html
+++ b/PersonalWebsiteTemplate/index.html
@@ -68,6 +68,7 @@ http://www.tooplate.com/view/2090-kinetic
 								<li class="icon fa fa-home">
 									<span class="title">Hello there!</span>
 									<h4>I'm Raquel!</h4>
+									<a href="resumeVersions/Raquel_Lin_Resume.pdf" target="_blank"><p>Want the short version? Click on me!</p></a>
 									<p>
 										"Every school of thought and government has failed in this city — 
                     but I love it nonetheless. 
